Finalize serial spot projection optimization